<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventPost" >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="29dp"
        android:text="@string/fillEvent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="38dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="12dp"
        android:text="@string/starttime"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="12dp"
        android:text="@string/endtime"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="12dp"
        android:text="@string/cost"
        android:textAppearance="?android:attr/textAppearanceSmall" />

     <EditText
         android:id="@+id/title"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView2"
         android:layout_toRightOf="@+id/textView7"
         android:ems="10"
         android:inputType="text"
         android:textSize="12sp"
         android:hint="Title of post" />

     <EditText
         android:id="@+id/location"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView4"
         android:layout_toRightOf="@+id/textView7"
         android:ems="10"
         android:hint="Location of event"
         android:inputType="text"
         android:textSize="12sp" />
     
     <EditText
         android:id="@+id/startTime"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView4"
         android:layout_below="@+id/location"
         android:layout_toRightOf="@+id/textView7"
         android:ems="10"
         android:inputType="datetime"
         android:textSize="12sp"
         android:hint="mm-dd-yyyy hh:mm:ss" />

     <EditText
         android:id="@+id/endTime"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView6"
         android:layout_below="@+id/startTime"
         android:layout_toRightOf="@+id/textView7"
         android:ems="10"
         android:inputType="datetime"
         android:textSize="12sp"
         android:hint="mm-dd-yyyy hh:mm:ss" />

     <EditText
         android:id="@+id/cost"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView7"
         android:layout_below="@+id/endTime"
         android:layout_toRightOf="@+id/textView7"
         android:ems="10"
         android:inputType="numberDecimal"
         android:textSize="12sp" />

     <EditText
         android:id="@+id/description"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
         android:layout_alignLeft="@+id/cost"
         android:ems="10"
         android:inputType="textMultiLine"
         android:textSize="12sp"
         android:hint="Details about the event" />

     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView4"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="12dp"
         android:text="@string/description"
         android:textAppearance="?android:attr/textAppearanceSmall" />

     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button1"
         android:layout_alignBottom="@+id/button1"
         android:layout_marginLeft="22dp"
         android:layout_toRightOf="@+id/button1"
         android:onClick="cancelEventPost"
         android:text="@string/cancel" />

     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/description"
         android:layout_marginTop="38dp"
         android:layout_toRightOf="@+id/textView3"
         android:onClick="saveEventPost"
         android:text="@string/submit" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="16dp"
         android:text="@string/location"
         android:textAppearance="?android:attr/textAppearanceSmall" />
     
</RelativeLayout>
